--- a/q/61552.html
+++ b/q/61552.html
@@ -26,15 +26,15 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>007</td><td>Vyxal</td><td>240913T053441Z</td><td><a href="https://codegolf.stackexchange.com/questions/61552/no-one-please/275494#275494">emanresu</a></td></tr>
-<tr d-ix="1"><td>011</td><td>Pip</td><td>211012T175613Z</td><td><a href="https://codegolf.stackexchange.com/questions/61552/no-one-please/236227#236227">DLosc</a></td></tr>
-<tr d-ix="2"><td>064</td><td>Excel</td><td>211012T175204Z</td><td><a href="https://codegolf.stackexchange.com/questions/61552/no-one-please/236226#236226">Axuary</a></td></tr>
-<tr d-ix="3"><td>064</td><td>Python 3</td><td>211012T105055Z</td><td><a href="https://codegolf.stackexchange.com/questions/61552/no-one-please/236217#236217">Olupo</a></td></tr>
-<tr d-ix="4"><td>006</td><td>05AB1E legacy</td><td>201112T141747Z</td><td><a href="https://codegolf.stackexchange.com/questions/61552/no-one-please/215125#215125">Kevin Cr</a></td></tr>
-<tr d-ix="5"><td>042</td><td>Julia 1.0</td><td>201117T162811Z</td><td><a href="https://codegolf.stackexchange.com/questions/61552/no-one-please/215315#215315">MarcMush</a></td></tr>
-<tr d-ix="6"><td>036</td><td>Bash + GNU utils</td><td>151023T162937Z</td><td><a href="https://codegolf.stackexchange.com/questions/61552/no-one-please/61557#61557">Digital </a></td></tr>
-<tr d-ix="7"><td>076</td><td>Java JDK</td><td>211011T002406Z</td><td><a href="https://codegolf.stackexchange.com/questions/61552/no-one-please/236193#236193">Del</a></td></tr>
-<tr d-ix="8"><td>008</td><td>Japt</td><td>201112T162318Z</td><td><a href="https://codegolf.stackexchange.com/questions/61552/no-one-please/215133#215133">Shaggy</a></td></tr>
+<tr d-ix="0"><td>008</td><td>Japt</td><td>201112T162318Z</td><td><a href="https://codegolf.stackexchange.com/questions/61552/no-one-please/215133#215133">Shaggy</a></td></tr>
+<tr d-ix="1"><td>007</td><td>Vyxal</td><td>240913T053441Z</td><td><a href="https://codegolf.stackexchange.com/questions/61552/no-one-please/275494#275494">emanresu</a></td></tr>
+<tr d-ix="2"><td>011</td><td>Pip</td><td>211012T175613Z</td><td><a href="https://codegolf.stackexchange.com/questions/61552/no-one-please/236227#236227">DLosc</a></td></tr>
+<tr d-ix="3"><td>064</td><td>Excel</td><td>211012T175204Z</td><td><a href="https://codegolf.stackexchange.com/questions/61552/no-one-please/236226#236226">Axuary</a></td></tr>
+<tr d-ix="4"><td>064</td><td>Python 3</td><td>211012T105055Z</td><td><a href="https://codegolf.stackexchange.com/questions/61552/no-one-please/236217#236217">Olupo</a></td></tr>
+<tr d-ix="5"><td>006</td><td>05AB1E legacy</td><td>201112T141747Z</td><td><a href="https://codegolf.stackexchange.com/questions/61552/no-one-please/215125#215125">Kevin Cr</a></td></tr>
+<tr d-ix="6"><td>042</td><td>Julia 1.0</td><td>201117T162811Z</td><td><a href="https://codegolf.stackexchange.com/questions/61552/no-one-please/215315#215315">MarcMush</a></td></tr>
+<tr d-ix="7"><td>036</td><td>Bash + GNU utils</td><td>151023T162937Z</td><td><a href="https://codegolf.stackexchange.com/questions/61552/no-one-please/61557#61557">Digital </a></td></tr>
+<tr d-ix="8"><td>076</td><td>Java JDK</td><td>211011T002406Z</td><td><a href="https://codegolf.stackexchange.com/questions/61552/no-one-please/236193#236193">Del</a></td></tr>
 <tr d-ix="9"><td>033</td><td>AWK</td><td>211010T045728Z</td><td><a href="https://codegolf.stackexchange.com/questions/61552/no-one-please/236181#236181">cnamejj</a></td></tr>
 <tr d-ix="10"><td>008</td><td>Jelly</td><td>201112T124157Z</td><td><a href="https://codegolf.stackexchange.com/questions/61552/no-one-please/215120#215120">caird co</a></td></tr>
 <tr d-ix="11"><td>018</td><td>GolfScript</td><td>201113T032100Z</td><td><a href="https://codegolf.stackexchange.com/questions/61552/no-one-please/215158#215158">Samuel W</a></td></tr>
@@ -54,7 +54,21 @@
 <tr d-ix="25"><td>047</td><td>Perl 5</td><td>151023T160800Z</td><td><a href="https://codegolf.stackexchange.com/questions/61552/no-one-please/61553#61553">msh210</a></td></tr>
 <tr d-ix="26"><td>053</td><td>JavaScript</td><td>151023T160956Z</td><td><a href="https://codegolf.stackexchange.com/questions/61552/no-one-please/61554#61554">Mwr247</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 7 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, <s>9</s> 8 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<pre><code>È¥srB}iU
+</code></pre>
+<p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;code=yKVzckJ9aVU&amp;input=MTA5" rel="nofollow noreferrer">Try it</a></p>
+<pre><code>È¥srB}iU     :Implicit input of integer U
+È            :Function taking an integer as argument
+ ¥           :  Test equality with
+  s          :    Convert to string
+   r         :    Remove all occurrences of
+    B        :      11
+     }       :End function
+      iU     :Get the Uth integer that returns true
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 7 bytes</h1>
 <pre><code>11c¬)ȯt
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyIiLCIiLCIxMWPCrCnIr3QiLCIiLCIxMTEiXQ==" rel="nofollow noreferrer">Try it Online!</a></p>
@@ -66,7 +80,7 @@
 11      # 11
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/dloscutoff/pip" rel="nofollow noreferrer">Pip</a>, 11 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/dloscutoff/pip" rel="nofollow noreferrer">Pip</a>, 11 bytes</h1>
 <pre><code>LaW11N Ui_i
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m724ILNgwYKlpSVpuharfRLDDQ39tLUz4zMhIlCJpdGGBpaxUA4A" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -80,17 +94,17 @@ La           Loop (a) times:
           i  Once the loop completes, output i
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1>Excel, 64 bytes</h1>
+<div id="pu3" class="pu"><h1>Excel, 64 bytes</h1>
 <pre><code>=LET(x,SEQUENCE(2^20),INDEX(FILTER(x,ISERROR(FIND(&quot;11&quot;,x))),I7))
 </code></pre>
 <p>Works up to 1,000,579 -&gt; 1,048,576</p>
 </div>
-<div id="pu3" class="pu"><h1>Python 3, 64 bytes</h1>
+<div id="pu4" class="pu"><h1>Python 3, 64 bytes</h1>
 <pre><code>[print(e) for e in map(str,range(int(input())+1))if not'11'in e]
 </code></pre>
 <p><a href="https://tio.run/##FcoxDoAwCADAr7AVokvtc4xDB6oM0gZx8PWo8914/OhaItZhoo5M0LoBgyicdeDlNlvVnfFX0XE7Ek2ZSBpo95Rz@ipvEXkpLw" rel="nofollow noreferrer">Try it online!</a></p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E (legacy)</a>, <s>7</s> 6 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E (legacy)</a>, <s>7</s> 6 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>µN11å≠
 </code></pre>
 <p>-1 byte switching to the legacy version of 05AB1E, where the index is output implicitly after a while-loop <code>µ</code>. In the new 05AB1E version we have to push the <code>N</code> explicitly, and it'll output the top of the stack after the while-loop instead (so the <code>N</code> would be <code>NN</code> or <code>ND</code>).</p>
@@ -106,29 +120,24 @@ La           Loop (a) times:
         # (after which the index `N` is output implicitly as result)
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h1><a href="http://julialang.org/" rel="nofollow noreferrer">Julia 1.0</a>, <s>44</s> 42 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="http://julialang.org/" rel="nofollow noreferrer">Julia 1.0</a>, <s>44</s> 42 bytes</h1>
 
 <pre class="lang-julia prettyprint-override"><code>x-&gt;(r=1:9x)[.!occursin.(&quot;11&quot;,repr.(r))][x]
 </code></pre>
 <p><a href="https://tio.run/##PY5BDoIwEEXX9hRjV9NYCYMbMSkXaVgYhKSEFFLFcBDjytN5EaSUOpv5f@bNz7RjZ640zQ0omKdjgU7RJZ@ETvZ9VY3ubmyCnIhLVw8uQSdEqadyZs/aGX@EDJYiUAWQXHXmdRY0pesi3VzA4m4F6RTJc0Dz6PMA/29DVEbRb2FLmmCs6R2gka0AY2H9je0GZ@yjs6j59/MGLmHpL@ClxgaNUKoVByolGJ/jJ4LV9jb/AA" rel="nofollow noreferrer" title="Julia 1.0 – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu6" class="pu"><h1>Bash + GNU utils, 36</h1>
+<div id="pu7" class="pu"><h1>Bash + GNU utils, 36</h1>
 <pre class="lang-bash prettyprint-override"><code>seq $1$1|grep -v 11|sed -n &quot;$1{p;q}&quot;
 </code></pre>
 <p><a href="https://tio.run/##S0oszvj/vzi1UEHFUMWwJr0otUBBt0zB0LCmODVFQTdPQUnFsLrAurBW6f///4YgAAA" rel="nofollow noreferrer">Try it Online</a></p>
 </div>
-<div id="pu7" class="pu"><h1><a href="http://jdk.java.net/" rel="nofollow noreferrer">Java (JDK)</a>, 76 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="http://jdk.java.net/" rel="nofollow noreferrer">Java (JDK)</a>, 76 bytes</h1>
 
 <pre class="lang-java prettyprint-override"><code>p-&gt;{int c=1,s=0;while((c+s+&quot;&quot;).indexOf(&quot;11&quot;)&gt;=0&amp;&amp;++s&gt;0||c++&lt;p);return p+s;};
 </code></pre>
 <p><a href="https://tio.run/##XY6xbsMgFEVn@ysQQwSiQXZXgqWOnTJYnaoOxHbSRzEgeE5jJf5211k7XV3p6txjzdXsbf@zwhhDQmK3LicEJ8@T7xCCl@8eP7xJ8zEOyWBIqiw7Z3ImrfH9KdzIvSzidHLQkYwGt7gG6MlowLMWE/jL5xcx6ZL5c1n8xxEgeo375g4eSafrl6wr9fsNbmCsE1lQyiX4frgdz4zWNeWNrnY7IXJTPR6dEIfIVRpwSp5EkdWi1nNI7Amzulb2oOvXSlkh@PZdtHPGYZRhQhk3M3SeWUEJFSBNjG5@y5ses5yrsljKZf0D" rel="nofollow noreferrer" title="Java (JDK) – Try It Online">Try it online!</a></p>
 <p>How it works:
 Lambda function obviously, but mostly it uses short-circuit logic in the while loop boolean to increment the appropriate counter keeping track of the cumulative shift for each input and returning the input plus that shift.</p>
-</div>
-<div id="pu8" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, <s>9</s> 8 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
-<pre><code>È¥srB}iU
-</code></pre>
-<p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;code=yKVzckJ9aVU&amp;input=MTA5" rel="nofollow noreferrer">Try it</a></p>
 </div>
 <div id="pu9" class="pu"><h1><a href="https://www.gnu.org/software/gawk/manual/gawk.html" rel="nofollow noreferrer">AWK</a>, 33 bytes</h1>
 <pre><code>{for(;$1;)$1-=!index(++b,11)}$0=b
