--- a/q/275522.html
+++ b/q/275522.html
@@ -26,10 +26,23 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>030</td><td>Retina 0.8.2</td><td>240914T055131Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275524#275524">Neil</a></td></tr>
-<tr d-ix="1"><td>nan</td><td>Vyxal</td><td>240914T043133Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275523#275523">lyxal</a></td></tr>
+<tr d-ix="0"><td>005</td><td>Charcoal</td><td>240914T055735Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275526#275526">Neil</a></td></tr>
+<tr d-ix="1"><td>030</td><td>Retina 0.8.2</td><td>240914T055131Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275524#275524">Neil</a></td></tr>
+<tr d-ix="2"><td>nan</td><td>Vyxal</td><td>240914T043133Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275523#275523">lyxal</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 30 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 5 bytes</h1>
+<pre><code>Ｉ⍘Ｓ·¹
+</code></pre>
+<p><a href="https://tio.run/##S85ILErOT8z5/z@gKDOvRMM5sbhEwymxODW4BMhP1/DMKygtgbI1dRQM9Aw1NTWt//83NNIzNvmvW5YDAA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
+<pre><code>  Ｓ      Input string
+ ⍘       Interpret as base
+   ·¹    Literal number `0.1`
+Ｉ        Cast to string
+         Implicitly print
+</code></pre>
+<p>When converting a string &quot;from&quot; a numeric base, Charcoal interprets the characters <code>0-9a-zA-Z</code> as integers from <code>0</code> to <code>61</code> and then computes the polynomial with the given input base.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 30 bytes</h1>
 <pre><code>$
 .
 D`\.
@@ -71,7 +84,7 @@ V`\..
 </code></pre>
 <p><a href="https://tio.run/##K0otycxLNPyvH5OirRGjByQ17fXjNdwT/qtw6XG5JMTocYUlAFGMnh5XjJ4K1///hkZ6xiYKNrZ2CibGRnqGXAaGRmAeiG2sZwBmA2kDAA" rel="nofollow noreferrer" title="Retina – Try It Online">Try it online!</a> Link is to test suite that converts any match of <code>/\d+(\.\d+)?/</code> in the input.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, <sup>(04.41)</sup> 144 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, <sup>(08.1)</sup> 18 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, <sup>(04.41)</sup> 144 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, <sup>(08.1)</sup> 18 bytes</h1>
 <pre><code>\./0J2Ẏ÷$ṫ$\0∴WRIṠ\.j
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyI9IiwiIiwiXFwuLzBKMuG6jsO3JOG5qyRcXDDiiLRXUknhuaBcXC5qIiwiIiwiXCIxOFwiIl0=" rel="nofollow noreferrer">Try it Online!</a></p>
