--- a/q/275514.html
+++ b/q/275514.html
@@ -26,18 +26,18 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>081</td><td>JavaScript ES6</td><td>240913T162228Z</td><td><a href="https://codegolf.stackexchange.com/questions/275514/ascii-2d-landscape/275516#275516">Arnauld</a></td></tr>
+<tr d-ix="0"><td>077</td><td>JavaScript ES6</td><td>240913T162228Z</td><td><a href="https://codegolf.stackexchange.com/questions/275514/ascii-2d-landscape/275516#275516">Arnauld</a></td></tr>
 <tr d-ix="1"><td>039</td><td>Z80 Machine Code</td><td>240914T055429Z</td><td><a href="https://codegolf.stackexchange.com/questions/275514/ascii-2d-landscape/275525#275525">v-rob</a></td></tr>
 <tr d-ix="2"><td>033</td><td>Charcoal</td><td>240913T163742Z</td><td><a href="https://codegolf.stackexchange.com/questions/275514/ascii-2d-landscape/275517#275517">Neil</a></td></tr>
 <tr d-ix="3"><td>035</td><td>Perl 5 + pF M5.10.0</td><td>240913T150923Z</td><td><a href="https://codegolf.stackexchange.com/questions/275514/ascii-2d-landscape/275515#275515">Dom Hast</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>JavaScript (ES6), 81 bytes</h1>
-<p><em>-6 thanks to <a href="https://codegolf.stackexchange.com/users/44718/tsh">@tsh</a>, and -2 from there</em></p>
+<div id="pu0" class="pu"><h1>JavaScript (ES6), 77 bytes</h1>
+<p><em>-10 thanks to <a href="https://codegolf.stackexchange.com/users/44718/tsh">@tsh</a></em></p>
 <p>Expects an array of characters and returns a matrix of characters, with leading and/or trailing blank lines.</p>
 
-<pre class="lang-javascript prettyprint-override"><code>a=&gt;[...a+a].map((_,y)=&gt;a.map(c=&gt;&quot;_\\/ &quot;[+[...a,i=2][c&gt;&quot;s&quot;?y++:y-=i=c&lt;&quot;s&quot;]?+i:3]))
+<pre class="lang-javascript prettyprint-override"><code>a=&gt;[...a+a].map((_,y)=&gt;a.map(c=&gt;&quot; /\\_&quot;[(a+3)[i=2,c&gt;&quot;s&quot;?y++:y-=i=c&lt;&quot;s&quot;]&amp;~i]))
 </code></pre>
-<p><a href="https://tio.run/##NY5Bj8IgFITv/RXknUAqTfSmC578FS1rXqB1MRUakE3667ulq@8dZr7MHOaBv5hMdNNr74Ptl0EuKFUrhECOWjxxovRWz0wq3MBIBbeuawi0fGvVTh50axQkuMycn@a9dNJ8ragv3J2OmrHl3FaEQM5QF7X2X3NONmebrP0kecVCH7Tl03pQ6UoMIV7R/NBEpCIm@BTGXozhTgdaliTNtoWxxFE8gvMUgLG36zwwEftpRNPT5pvsOt/cnzUpFXZe/gA" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##NY7BbsMgEETv/gq0h4qtHSy1t7bQU7/CJtEK7ITIAQtKJF/y645Jm9nD7NPMYc50pWSim393PthhHeVKUnVCCKpJiwvNnB@aBaWiBxipgLV9f4COU/2OnZNvjVGQ4Hup649lJ500Xxvql5vTiOtnVzEGOUNT3No/zznZnG2y9pnkDQs90ZZLm6DSlRhD/CFz4olJxUzwKUyDmMKRj7xsTRof62KJozgH5zkA4v/Xe0ARh3kiM/B2z1573x4vDSsVXO8" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <p>(the test code includes some post-processing for readability)</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://en.wikipedia.org/wiki/Zilog_Z80" rel="nofollow noreferrer">Z80 Machine Code</a>, 39 bytes</h1>
