--- a/q/105998.html
+++ b/q/105998.html
@@ -26,11 +26,11 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>060</td><td>Japt R</td><td>240807T135148Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/274755#274755">Shaggy</a></td></tr>
-<tr d-ix="1"><td>192</td><td>Java JDK</td><td>240905T154702Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/275375#275375">Fhuvi</a></td></tr>
-<tr d-ix="2"><td>159</td><td>JavaScript Node.js</td><td>170107T170956Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/106004#106004">Arnauld</a></td></tr>
-<tr d-ix="3"><td>164</td><td>C clang</td><td>240907T150544Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/275402#275402">jdt</a></td></tr>
-<tr d-ix="4"><td>193</td><td>Zsh</td><td>240906T084713Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/275383#275383">roblogic</a></td></tr>
+<tr d-ix="0"><td>182</td><td>Zsh</td><td>240906T084713Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/275383#275383">roblogic</a></td></tr>
+<tr d-ix="1"><td>060</td><td>Japt R</td><td>240807T135148Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/274755#274755">Shaggy</a></td></tr>
+<tr d-ix="2"><td>192</td><td>Java JDK</td><td>240905T154702Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/275375#275375">Fhuvi</a></td></tr>
+<tr d-ix="3"><td>159</td><td>JavaScript Node.js</td><td>170107T170956Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/106004#106004">Arnauld</a></td></tr>
+<tr d-ix="4"><td>164</td><td>C clang</td><td>240907T150544Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/275402#275402">jdt</a></td></tr>
 <tr d-ix="5"><td>151</td><td>ARBLE</td><td>240906T021006Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/275381#275381">ATaco</a></td></tr>
 <tr d-ix="6"><td>092</td><td>Uiua</td><td>240905T202922Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/275379#275379">noodle p</a></td></tr>
 <tr d-ix="7"><td>125</td><td>V</td><td>170107T192646Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/106019#106019">user4180</a></td></tr>
@@ -64,7 +64,16 @@
 <tr d-ix="35"><td>172</td><td>Befunge</td><td>170107T205422Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/106028#106028">James Ho</a></td></tr>
 <tr d-ix="36"><td>179</td><td>C</td><td>170107T171910Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/106005#106005">simon</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a> <a href="https://codegolf.meta.stackexchange.com/a/14339/"><code>-R</code></a>, <s>65</s> <s>64</s> <s>63</s> <s>62</s> 60 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu0" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a>, <sub><s>239</s></sub> <sub><s>193</s></sub> 182 bytes</h1>
+<pre class="lang-sh prettyprint-override"><code>t=&quot;Dec  Chr   | &quot;;&lt;&lt;&lt;$t$t$t[1,8];jot -s-- -b- 12
+for n ({32..63})for i (0 32 64){k=$[n+i] c=${(#)k}
+case $k {32)c=Space;;127)c=DEL;};z='| ';((i&gt;32))&amp;&amp;z=\\n;printf &quot;%-5s%-6s$z&quot; $k $c}
+</code></pre>
+<p><a href="https://tio.run/##FYy7DoIwAEV3vuIGC7bRGimKJqUu6ubmiAzYQEASIJSJx7cj5EwnOff2Jp/nTtmPVAP3vAUwwpZhGJJuJfL211j@6g7ccA7@5fCEldUtKtDBF4dD4E9s9QL0CF8gOLGhVCSqdkUMrchAN6ycLJ2YFKTEsmFavZtEp1J64rLI4/mSk@zVdsRWUlrcloS5bq8@n0o2bVF1GWyHn43DA0N6e70heprnPw" rel="nofollow noreferrer">Try it online!</a>
+<sub><s><a href="https://tio.run/##PYuxDoIwAER3v@KChbbRGmmRmJSyqJubIzpoIwFJ0FAmkW9HiIm5W@693NsVw9Aab3@3wK5oAHzg6SRJSDslC5fbi348W4gbBIQDpVDRLH82qME6JVerWPV82iXYGkoijnhXGZLVi/KirSEdm/Oq14xViVKcB4E1p9fV3mcjSUMZ/9D@cNS5ob7YOF/E7gM6PspUyUn/xcada6pfTVm3OcjYCsT2w/AF" rel="nofollow noreferrer">193b</a></s></sub>
+<sub><s><a href="https://tio.run/##XY6xDoIwFEV3vuIFi0CURqigCbxJ3NwciYMpEFzahjIJ/XYEjMaYu56cc5@6GccO7bziAKemBYAB7DTLMtLNK8Lt8Zaq9iG6GgKH7jT0IaVsb9KKN9KqZQsCvJ5FlCbM@D1H0nsrX5jU8wQii3x/veZ4VXdefTyuE8TaCRI9uEAEEG5JJIXYsOibcuGXkbBIpbHUBMoFLN8hNYcUYhgd5lKJ@fnyL4n15FBAyuWzGccX" rel="nofollow noreferrer" title="Zsh – Try It Online">239b</a></s></sub></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a> <a href="https://codegolf.meta.stackexchange.com/a/14339/"><code>-R</code></a>, <s>65</s> <s>64</s> <s>63</s> <s>62</s> 60 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
 <p><em>Still</em> not happy the insertion of the line of dashes. And the <code>trim</code> is annoying me now, too! Another approach may be needed.</p>
 <pre><code>Hó96
 íUmd h`Spa­` hJ&quot;DEL&quot;)òH Ëi&quot;DCehcr&quot;ó)ú5 m¬ÃÕËq|û3)xÃyÈiÉ
@@ -105,7 +114,7 @@ H                                                                :32
                                                                  :Implicit output joined with newlines
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="http://jdk.java.net/" rel="nofollow noreferrer">Java (JDK)</a>, 192 <sup><s>194</s> <s>200</s></sup> bytes</h1>
+<div id="pu2" class="pu"><h1><a href="http://jdk.java.net/" rel="nofollow noreferrer">Java (JDK)</a>, 192 <sup><s>194</s> <s>200</s></sup> bytes</h1>
 <blockquote>
 <p>-6 bytes with the help of Khuldraeseth na'Barya<br>
 <br>
@@ -130,7 +139,7 @@ The header line (<code>Dec  Chr  </code>) is managed inside of the loop.</p>
 </code></pre>
 <p><a href="https://tio.run/##hZXdVttGFIXv8xSnakikyHZsCxuwLNwm0J@U9CekSVtEWsXIIEXIiiSTUKB3vesjtC@XF6F7B53BWaGrXgtrNOv7ZrS3Bkijk6idHry6LBYvs2Qq0yyqKnkcJbmc3bolkuR1XM6iaSw7mBB8dusyyQ9lZjs@7i8IVXVUw92RTIJL22lvnjVQEVhyLlarDKyteCry8KgUsfzSDQq3dPljhbnlz@aljY0kCfqtNOj6rpuMe57np0Gy4t3z@m6/6yb3PQdeMvbWJlbbGl3t0IF6HNW2DTAIehMuNyoc11rp3W4PqpU@v61W2krHnjexdgsksUbpZq8/nFhb2zvWyJ4eRaWTOn4Z14syl9K/uPQZqimkyXYyTw4kPokyu4kWvy3iaR0fOB/WUsbVIqslkKzTNCTycj7P4iiXpHoWZVgmkLpcxP6StrcvUVlGp9vNokB0/U5VZEltM5hzk/JEN7za@WNcd70TfLhHJ4vzw/pIgmB5oWa2UWdiN7rGFEHj0rytri/J@KZFMe@618p/P8Rest@JXy@irLKXHoKzFVIWT8soyRDWdpowPHDX37unVR0fd@aLulOgkzrLbX3eifXu7z95GKx3//zFMtyrfq4P7Q3v9xjH3l6q97DSDO/fvCwdYhzrG2/CvP2/nzD3@nx6Hkaow1XcfPY@3LlsDHH5DYSH6yfN5HCAy@dKrOESgaAWWorQe6DIOk8dEHqfKkHvoRIbuExBULutBLWt5qbX7YocgKC2ogS1bUP0UAwIaneayTVY8oUhkHMGgtpdJWDJl4ZAzsMwX6VmK8F2vjIEch6BoOYowXa@NgRiJiCo3VOC7TwyBGKmIKi5SrCcbwyBmK9AUGspwXJ2DIGYGQhqbSVYzmNDIOYxCGodJVjOt0r0EDMHQe2@EiznO0Mg5hwEtW4zuc7B94ZAzAIEtZ4SHPxgCMR8HeYDan0lOHhiCMTEUR1Q85TgYNcQiFmBoLaqBAdPDYGYNQhqAyU4@NEQiLkAQW2oBAfPDIGYJyCorSnBwXNDIOYbENTWleDgJyX6iPkWBLUNJTj42RCIeQqC2kh/AVjOL4ZAzN9BUPOVYDl7hkDMszAfUhsrwXLC0CDIeQ6EXqAI29k3BHJegKC3qQTbeWEI5PwDBLWJEmznV0MgJ/9xif4lu7j8Fw" rel="nofollow noreferrer" title="Java (JDK) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 159 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 159 bytes</h1>
 <p><em>-11 by switching to Node.js, as suggested by <a href="https://codegolf.stackexchange.com/users/116582/fhuvi">Fhuvi</a></em></p>
 
 <pre class="lang-javascript prettyprint-override"><code>f=n=&gt;n?(n&gt;&gt;6?&quot; | &quot;:`
@@ -140,20 +149,12 @@ ${&quot;-&quot;.repeat(34)}
 </code></pre>
 <p><a href="https://tio.run/##LYxNC4JAFEX3/orh4WIeopCakKQDpbt2LSNw0Jk@kOegFoH6222C7uIuDufep3zLoe4fZvSpa9S66oyynASnPE8EsJlBWjkVepw8AAyMbEpq@NaCTZjsSUBRniA9vLRWPb/QFT1gNuBpu8go322Fn0RpFCKmlTt9MihUzdjx3v@sZWaW/dtxJ/Ah6JVRcuRRjIsThdY6G1mryh4mMa51R0PXqqDtblxzxPUL" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu3" class="pu"><h1><a href="http://clang.llvm.org/" rel="nofollow noreferrer">C (clang)</a>, 164 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="http://clang.llvm.org/" rel="nofollow noreferrer">C (clang)</a>, 164 bytes</h1>
 
 <pre class="lang-c prettyprint-override"><code>i;f(){for(i=0;i++&lt;37;)printf(i&lt;4?&quot;Dec Chr%s&quot; :&quot;-&quot;,i&lt;3?&quot;   | &quot;:&quot;\n&quot;);for(i=0;i-127;printf(&quot;%s%-4d%-6s&quot;,i&lt;64?&quot;\n&quot;:&quot;| &quot;,i,i-32?i-127?&amp;i:&quot;DEL&quot;:&quot;Space&quot;))i+=i&gt;95?-63:32;}
 </code></pre>
 <p><a href="https://tio.run/##PY69CsIwFEZn@xSXC5WGNqCNVkyqGdTNzdWlxFYvaJTUn0F9dWMUcf7OOXyGm31lt96TahJ2b44uoUlPUZqWYqTYyZE9NwmVA43z2sBs5@IWQSLHjEqhEQAegBLXFpn627yfj9TPxbiN@WAT86L9OEUoBVhi0DLKiItcf3ndJYnzxTJMq1NlamSM0glNx0PNCyFFrp4@BOFQkU2uR9owuEedcFpFHVefL85CT0VP/zLNvtq2nt/e" rel="nofollow noreferrer" title="C (clang) – Try It Online">Try it online!</a></p>
 <p>Table header part stolen from <a href="https://codegolf.stackexchange.com/a/106005/41374">@simon's answer</a></p>
-</div>
-<div id="pu4" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a>, <sub><s>239</s></sub> 193 bytes</h1>
-<pre class="lang-sh prettyprint-override"><code>t=&quot;Dec  Chr   | &quot;;&lt;&lt;&lt;$t$t$t[1,8];jot -b - -s '' 34
-for n ({32..63})for i (0 32 64){k=$[n+i];c=${(#)k};((k&lt;33))&amp;&amp;c=Space
-((k&gt;126))&amp;&amp;c=DEL;f='%-5s%-6s| ';((i&gt;32))&amp;&amp;f='%-5s%-5s\n';printf $f $k $c}
-</code></pre>
-<p><a href="https://tio.run/##PYuxDoIwAER3v@KChbbRGmmRmJSyqJubIzpoIwFJ0FAmkW9HiIm5W@693NsVw9Aab3@3wK5oAHzg6SRJSDslC5fbi348W4gbBIQDpVDRLH82qME6JVerWPV82iXYGkoijnhXGZLVi/KirSEdm/Oq14xViVKcB4E1p9fV3mcjSUMZ/9D@cNS5ob7YOF/E7gM6PspUyUn/xcada6pfTVm3OcjYCsT2w/AF" rel="nofollow noreferrer">Try it online!</a>
-<sub><s><a href="https://tio.run/##XY6xDoIwFEV3vuIFi0CURqigCbxJ3NwciYMpEFzahjIJ/XYEjMaYu56cc5@6GccO7bziAKemBYAB7DTLMtLNK8Lt8Zaq9iG6GgKH7jT0IaVsb9KKN9KqZQsCvJ5FlCbM@D1H0nsrX5jU8wQii3x/veZ4VXdefTyuE8TaCRI9uEAEEG5JJIXYsOibcuGXkbBIpbHUBMoFLN8hNYcUYhgd5lKJ@fnyL4n15FBAyuWzGccX" rel="nofollow noreferrer" title="Zsh – Try It Online">239b</a></s></sub></p>
 </div>
 <div id="pu5" class="pu"><h1><a href="https://github.com/TehFlaminTaco/ARBLE" rel="nofollow noreferrer">ARBLE</a>, 151 bytes</h1>
 
