--- a/q/275522.html
+++ b/q/275522.html
@@ -26,11 +26,27 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>005</td><td>Charcoal</td><td>240914T055735Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275526#275526">Neil</a></td></tr>
-<tr d-ix="1"><td>030</td><td>Retina 0.8.2</td><td>240914T055131Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275524#275524">Neil</a></td></tr>
-<tr d-ix="2"><td>nan</td><td>Vyxal</td><td>240914T043133Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275523#275523">lyxal</a></td></tr>
+<tr d-ix="0"><td>087</td><td>Haskell</td><td>240914T131444Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275531#275531">DPD-</a></td></tr>
+<tr d-ix="1"><td>005</td><td>Charcoal</td><td>240914T055735Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275526#275526">Neil</a></td></tr>
+<tr d-ix="2"><td>030</td><td>Retina 0.8.2</td><td>240914T055131Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275524#275524">Neil</a></td></tr>
+<tr d-ix="3"><td>nan</td><td>Vyxal</td><td>240914T043133Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275523#275523">lyxal</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 5 bytes</h1>
+<div id="pu0" class="pu"><h1>Haskell, 87 bytes</h1>
+<pre class="lang-hs prettyprint-override"><code>f x|elem '.'x=g x&quot;0&quot;|True=g(x++&quot;.&quot;)&quot;0&quot;
+g(x:'.':y)z=g y$x:'.':z
+g(x:y)z=g y$(x:z)
+g[]z=z
+</code></pre>
+<p><a href="https://tio.run/##bYyxCoMwEED3fMVxCDaIQY2TkD/o1m6lg9BoS9UWqxCD/56esd2S6e69l7vXn6fuOucaMKvudA@xiI1qwWCG63mctWoPJklQICfCaKmoqBZuKVqifbOe/xmNlrP2crXKur5@DKDg9mJA7z1Pp2k8DhBBA5gXQpYIaQqlLEQeKDz3hW8DRZYXSJCK8AX/H/YLAS1F9tMybDe9WfcF" rel="nofollow noreferrer">Try it online!</a></p>
+<p>since (10^-1)^n = 10^-n we simply reverse the string, taking care of some special cases</p>
+<ul>
+<li><code>g(x:y)z=g y$(x:z)</code> and <code>g[]z=z</code> is <a href="https://hackage.haskell.org/package/ghc-internal-9.1001.0/docs/src/GHC.Internal.List.html#reverse" rel="nofollow noreferrer"><code>reverse</code></a> (where <code>z</code> is the accumulator)</li>
+<li><code>g(x:'.':y)z=g y$x:'.':z</code> swaps the position of the decimal point while reversing (in facts the unit remains the unit since 10^1 = 0.1^1 = 1)</li>
+<li><code>f x=g x&quot;0&quot;</code> calls our special reverse using an initial accumulator of <code>['0']</code>. This initial accumulator adds a trailing zero to the result, which ensures there is at least one digit after the decimal point</li>
+<li>with the guard <code>elem '.'x</code> we can add the decimal point to the input if it is missing</li>
+</ul>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 5 bytes</h1>
 <pre><code>Ｉ⍘Ｓ·¹
 </code></pre>
 <p><a href="https://tio.run/##S85ILErOT8z5/z@gKDOvRMM5sbhEwymxODW4BMhP1/DMKygtgbI1dRQM9Aw1NTWt//83NNIzNvmvW5YDAA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
@@ -42,7 +58,7 @@
 </code></pre>
 <p>When converting a string &quot;from&quot; a numeric base, Charcoal interprets the characters <code>0-9a-zA-Z</code> as integers from <code>0</code> to <code>61</code> and then computes the polynomial with the given input base.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 30 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 30 bytes</h1>
 <pre><code>$
 .
 D`\.
@@ -84,7 +100,7 @@ V`\..
 </code></pre>
 <p><a href="https://tio.run/##K0otycxLNPyvH5OirRGjByQ17fXjNdwT/qtw6XG5JMTocYUlAFGMnh5XjJ4K1///hkZ6xiYKNrZ2CibGRnqGXAaGRmAeiG2sZwBmA2kDAA" rel="nofollow noreferrer" title="Retina – Try It Online">Try it online!</a> Link is to test suite that converts any match of <code>/\d+(\.\d+)?/</code> in the input.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, <sup>(04.41)</sup> 144 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, <sup>(08.1)</sup> 18 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, <sup>(04.41)</sup> 144 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, <sup>(08.1)</sup> 18 bytes</h1>
 <pre><code>\./0J2Ẏ÷$ṫ$\0∴WRIṠ\.j
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyI9IiwiIiwiXFwuLzBKMuG6jsO3JOG5qyRcXDDiiLRXUknhuaBcXC5qIiwiIiwiXCIxOFwiIl0=" rel="nofollow noreferrer">Try it Online!</a></p>
